# clawagentmonitor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/examples/: snapshot.rs
crates/core/src/: agent_state.rs  autostart.rs  cli.rs  config.rs  gateway.rs  lib.rs  models.rs  watchdog.rs
crates/core/tests/fixtures/: gateway_probe.json  status_all_up.json  tasks_list.json
crates/gui/: Cargo.toml
crates/gui/examples/: notif_smoke.rs
crates/gui/src/: main.rs  notify.rs  tray.rs
crates/gui/ui/: main.slint
