[workspace]
resolver = "2"
members = ["crates/core", "crates/gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KarmaGame <dotmail18@gmail.com>"]
license = "MIT"
repository = "https://github.com/KarmaGame33/clawagentmonitor"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slint = "1.8"
slint-build = "1.8"
claw-core = { path = "crates/core" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
